--- a/docs/examples/Filter_compensation.ipynb
+++ b/docs/examples/Filter_compensation.ipynb
@@ -58,12 +58,11 @@
    "outputs": [],
    "source": [
     "def squarewave(npts, periods=5):\n",
-    "\n",
     "    periods = int(periods)\n",
     "    array = np.zeros(npts)\n",
     "\n",
     "    for n in range(periods):\n",
-    "        array[int(n*npts/periods): int((2*n+1)*npts/2/periods)] = 1\n",
+    "        array[int(n * npts / periods) : int((2 * n + 1) * npts / 2 / periods)] = 1\n",
     "\n",
     "    return array"
    ]
@@ -88,10 +87,10 @@
     "\n",
     "f_cut = 12  # filter cut-off frequency (Hz)\n",
     "\n",
-    "time = np.linspace(0, npts/SR, npts)\n",
+    "time = np.linspace(0, npts / SR, npts)\n",
     "T = time[-1]\n",
     "\n",
-    "signal1 = np.sin(2*np.pi*5/T*time)+0.7*np.cos(2*np.pi*1/T*time)\n",
+    "signal1 = np.sin(2 * np.pi * 5 / T * time) + 0.7 * np.cos(2 * np.pi * 1 / T * time)\n",
     "signal2 = squarewave(npts, periods=4)"
    ]
   },
@@ -103,7 +102,7 @@
    "source": [
     "# Then we may high-pass them or low-pass them\n",
     "\n",
-    "filtertype = 'HP'\n",
+    "filtertype = \"HP\"\n",
     "# filtertype = 'LP'\n",
     "\n",
     "signal1_filt = applyRCFilter(signal1, SR, filtertype, f_cut, order=1)\n",
@@ -909,16 +908,16 @@
     "# And inspect the result\n",
     "\n",
     "fig, axs = plt.subplots(2, 1)\n",
-    "axs[0].plot(time, signal1, label='Input signal')\n",
-    "axs[0].plot(time, signal1_filt, label='Filtered')\n",
-    "axs[0].set_xlabel('Time (s)')\n",
-    "axs[0].set_ylabel('Signal (a.u.)')\n",
+    "axs[0].plot(time, signal1, label=\"Input signal\")\n",
+    "axs[0].plot(time, signal1_filt, label=\"Filtered\")\n",
+    "axs[0].set_xlabel(\"Time (s)\")\n",
+    "axs[0].set_ylabel(\"Signal (a.u.)\")\n",
     "axs[0].legend()\n",
     "\n",
-    "axs[1].plot(time, signal2, label='Input signal')\n",
-    "axs[1].plot(time, signal2_filt, label='Filtered')\n",
-    "axs[1].set_xlabel('Time (s)')\n",
-    "axs[1].set_ylabel('Signal (a.u.)')\n",
+    "axs[1].plot(time, signal2, label=\"Input signal\")\n",
+    "axs[1].plot(time, signal2_filt, label=\"Filtered\")\n",
+    "axs[1].set_xlabel(\"Time (s)\")\n",
+    "axs[1].set_ylabel(\"Signal (a.u.)\")\n",
     "axs[1].legend()\n",
     "\n",
     "plt.tight_layout()"
@@ -1741,16 +1740,16 @@
    ],
    "source": [
     "fig, axs = plt.subplots(2, 1)\n",
-    "axs[0].plot(time, signal1, label='Input signal')\n",
-    "axs[0].plot(time, signal1_comp, label='Compensated')\n",
-    "axs[0].set_xlabel('Time (s)')\n",
-    "axs[0].set_ylabel('Signal (a.u.)')\n",
+    "axs[0].plot(time, signal1, label=\"Input signal\")\n",
+    "axs[0].plot(time, signal1_comp, label=\"Compensated\")\n",
+    "axs[0].set_xlabel(\"Time (s)\")\n",
+    "axs[0].set_ylabel(\"Signal (a.u.)\")\n",
     "axs[0].legend()\n",
     "\n",
-    "axs[1].plot(time, signal2, label='Input signal')\n",
-    "axs[1].plot(time, signal2_comp, label='Compensated')\n",
-    "axs[1].set_xlabel('Time (s)')\n",
-    "axs[1].set_ylabel('Signal (a.u.)')\n",
+    "axs[1].plot(time, signal2, label=\"Input signal\")\n",
+    "axs[1].plot(time, signal2_comp, label=\"Compensated\")\n",
+    "axs[1].set_xlabel(\"Time (s)\")\n",
+    "axs[1].set_ylabel(\"Signal (a.u.)\")\n",
     "axs[1].legend()\n",
     "\n",
     "plt.tight_layout()"
@@ -2563,19 +2562,19 @@
     "signal2_check2 = applyInverseRCFilter(signal2_filt, SR, filtertype, f_cut, order=1)\n",
     "\n",
     "fig, axs = plt.subplots(2, 1)\n",
-    "axs[0].set_title('Signal 1')\n",
-    "axs[0].plot(time, signal1_check1, label='Check 1')\n",
-    "axs[0].plot(time, signal1_check2, label='Check 2')\n",
+    "axs[0].set_title(\"Signal 1\")\n",
+    "axs[0].plot(time, signal1_check1, label=\"Check 1\")\n",
+    "axs[0].plot(time, signal1_check2, label=\"Check 2\")\n",
     "axs[0].legend()\n",
-    "axs[0].set_xlabel('Time (s)')\n",
-    "axs[0].set_ylabel('Signal (a. u.)')\n",
+    "axs[0].set_xlabel(\"Time (s)\")\n",
+    "axs[0].set_ylabel(\"Signal (a. u.)\")\n",
     "\n",
-    "axs[1].set_title('Signal 2')\n",
-    "axs[1].plot(time, signal2_check1, label='Check 1')\n",
-    "axs[1].plot(time, signal2_check2, label='Check 2')\n",
+    "axs[1].set_title(\"Signal 2\")\n",
+    "axs[1].plot(time, signal2_check1, label=\"Check 1\")\n",
+    "axs[1].plot(time, signal2_check2, label=\"Check 2\")\n",
     "axs[1].legend()\n",
-    "axs[1].set_xlabel('Time (s)')\n",
-    "axs[1].set_ylabel('Signal (a. u.)')\n",
+    "axs[1].set_xlabel(\"Time (s)\")\n",
+    "axs[1].set_ylabel(\"Signal (a. u.)\")\n",
     "\n",
     "plt.tight_layout()"
    ]
@@ -3395,21 +3394,25 @@
     "\n",
     "tf_freq = np.linspace(0, 1000, tf_points)\n",
     "tf_amp = np.zeros(tf_points)\n",
-    "tf_amp += np.hanning(2*tf_points)[tf_points:][::-1]  # A high-pass \n",
-    "tf_amp += 0.1  # Note: a transfer function with very low values give unphysical compensation\n",
+    "tf_amp += np.hanning(2 * tf_points)[tf_points:][::-1]  # A high-pass\n",
+    "tf_amp += (\n",
+    "    0.1  # Note: a transfer function with very low values give unphysical compensation\n",
+    ")\n",
     "tf_amp /= tf_amp.max()\n",
     "\n",
     "# and some experimental noise\n",
     "tf_noise_amp = 0.02\n",
-    "tf_amp += np.convolve(0.02*np.random.randn(tf_points),\n",
-    "                      np.array([0.5, 1, 0.5]), mode='same')/2\n",
+    "tf_amp += (\n",
+    "    np.convolve(0.02 * np.random.randn(tf_points), np.array([0.5, 1, 0.5]), mode=\"same\")\n",
+    "    / 2\n",
+    ")\n",
     "\n",
     "# And then our favourite signal: the square wave\n",
     "\n",
     "sig_points = 1000\n",
-    "signal = squarewave(sig_points, periods=10) + 0.01*np.random.randn(1000)\n",
+    "signal = squarewave(sig_points, periods=10) + 0.01 * np.random.randn(1000)\n",
     "SR = 2000  # We pretend that the signal was sampled with this sample rate\n",
-    "time = np.linspace(0, sig_points/SR, sig_points)\n",
+    "time = np.linspace(0, sig_points / SR, sig_points)\n",
     "\n",
     "# Then we may apply the filter we made\n",
     "\n",
@@ -3417,29 +3420,31 @@
     "\n",
     "# Or conversely, we may apply its inverse\n",
     "\n",
-    "signal_compensated = applyCustomTransferFunction(signal, SR, tf_freq, tf_amp, invert=True)\n",
+    "signal_compensated = applyCustomTransferFunction(\n",
+    "    signal, SR, tf_freq, tf_amp, invert=True\n",
+    ")\n",
     "\n",
     "# Finally, it's nice to visualise things\n",
     "\n",
     "fig, axs = plt.subplots(2, 2)\n",
     "axs[0, 0].plot(tf_freq, tf_amp)\n",
-    "axs[0, 0].set_xlabel('Freq. (Hz)')\n",
-    "axs[0, 0].set_ylabel('Transfer func.')\n",
+    "axs[0, 0].set_xlabel(\"Freq. (Hz)\")\n",
+    "axs[0, 0].set_ylabel(\"Transfer func.\")\n",
     "\n",
-    "axs[0, 1].plot(time, signal, color='#ff9900')\n",
-    "axs[0, 1].set_xlabel('Time (s)')\n",
-    "axs[0, 1].set_ylabel('Sig. ampl. (arb. un.)')\n",
-    "axs[0, 1].set_title('Input')\n",
+    "axs[0, 1].plot(time, signal, color=\"#ff9900\")\n",
+    "axs[0, 1].set_xlabel(\"Time (s)\")\n",
+    "axs[0, 1].set_ylabel(\"Sig. ampl. (arb. un.)\")\n",
+    "axs[0, 1].set_title(\"Input\")\n",
     "\n",
-    "axs[1, 0].plot(time, signal_filtered, color='#339966')\n",
-    "axs[1, 0].set_xlabel('Time (s)')\n",
-    "axs[1, 0].set_ylabel('Sig. ampl. (arb. un.)')\n",
-    "axs[1, 0].set_title('Filtered')\n",
+    "axs[1, 0].plot(time, signal_filtered, color=\"#339966\")\n",
+    "axs[1, 0].set_xlabel(\"Time (s)\")\n",
+    "axs[1, 0].set_ylabel(\"Sig. ampl. (arb. un.)\")\n",
+    "axs[1, 0].set_title(\"Filtered\")\n",
     "\n",
-    "axs[1, 1].plot(time, signal_compensated, color='#990033')\n",
-    "axs[1, 1].set_xlabel('Time (s)')\n",
-    "axs[1, 1].set_ylabel('Sig.ampl. (arb. un.)')\n",
-    "axs[1, 1].set_title('Compensated')\n",
+    "axs[1, 1].plot(time, signal_compensated, color=\"#990033\")\n",
+    "axs[1, 1].set_xlabel(\"Time (s)\")\n",
+    "axs[1, 1].set_ylabel(\"Sig.ampl. (arb. un.)\")\n",
+    "axs[1, 1].set_title(\"Compensated\")\n",
     "\n",
     "plt.tight_layout()"
    ]
