--- a/docs/examples/Making_output_for_Tektronix_AWG70000A.ipynb
+++ b/docs/examples/Making_output_for_Tektronix_AWG70000A.ipynb
@@ -49,11 +49,13 @@
     "baseshape = bb.BluePrint()\n",
     "baseshape.insertSegment(0, ramp, (0, 0), dur=t1)\n",
     "baseshape.insertSegment(1, ramp, (0, high_level), dur=ramp_time)\n",
-    "baseshape.insertSegment(2, sine, (f0, sine_amp, high_level, 0), dur=t_sine, name='drive')\n",
+    "baseshape.insertSegment(\n",
+    "    2, sine, (f0, sine_amp, high_level, 0), dur=t_sine, name=\"drive\"\n",
+    ")\n",
     "baseshape.insertSegment(3, ramp, (high_level, 0), dur=ramp_time)\n",
-    "baseshape.insertSegment(4, ramp, (0, 0), dur=t2, name='wait')\n",
-    "baseshape.setSegmentMarker('wait', (0, t_sine), 1)\n",
-    "baseshape.setSegmentMarker('drive', (0, t_sine), 2)\n",
+    "baseshape.insertSegment(4, ramp, (0, 0), dur=t2, name=\"wait\")\n",
+    "baseshape.setSegmentMarker(\"wait\", (0, t_sine), 1)\n",
+    "baseshape.setSegmentMarker(\"drive\", (0, t_sine), 2)\n",
     "baseshape.setSR(SR)"
    ]
   },
@@ -879,14 +881,14 @@
     "\n",
     "for index, freq in enumerate(sine_freqs):\n",
     "    elem = baseelem.copy()\n",
-    "    elem.changeArg(1, 'drive', 'freq', freq)\n",
-    "    seq.addElement(index+1, elem)\n",
-    "    seq.setSequencingTriggerWait(index+1, 1)  # 1: trigA, 2: trigB, 3: EXT\n",
+    "    elem.changeArg(1, \"drive\", \"freq\", freq)\n",
+    "    seq.addElement(index + 1, elem)\n",
+    "    seq.setSequencingTriggerWait(index + 1, 1)  # 1: trigA, 2: trigB, 3: EXT\n",
     "\n",
     "# and set the last element to point back to the first one\n",
-    "seq.setSequencingGoto(index+1, 1)\n",
+    "seq.setSequencingGoto(index + 1, 1)\n",
     "\n",
-    "seq.name = 'tutorial_sequence'  # the sequence name will be needed later"
+    "seq.name = \"tutorial_sequence\"  # the sequence name will be needed later"
    ]
   },
   {
@@ -915,7 +917,7 @@
     "\n",
     "from qcodes.instrument_drivers.tektronix.AWG70002A import AWG70002A\n",
     "\n",
-    "awg = AWG70002A('awg', 'TCPIP0::172.20.2.243::inst0::INSTR')"
+    "awg = AWG70002A(\"awg\", \"TCPIP0::172.20.2.243::inst0::INSTR\")"
    ]
   },
   {
@@ -972,7 +974,7 @@
    "outputs": [],
    "source": [
     "# transfer it to the awg harddrive\n",
-    "awg.sendSEQXFile(seqx_output, 'tutorial.seqx')"
+    "awg.sendSEQXFile(seqx_output, \"tutorial.seqx\")"
    ]
   },
   {
@@ -982,7 +984,7 @@
    "outputs": [],
    "source": [
     "# load it into awg active memory\n",
-    "awg.loadSEQXFile('tutorial.seqx')"
+    "awg.loadSEQXFile(\"tutorial.seqx\")"
    ]
   },
   {
@@ -994,7 +996,7 @@
    "outputs": [],
    "source": [
     "# assign tracks from the sequence to the awg sequencer\n",
-    "awg.ch1.setSequenceTrack('tutorial_sequence', 1)\n",
+    "awg.ch1.setSequenceTrack(\"tutorial_sequence\", 1)\n",
     "\n",
     "# NB: Each channel has an assigned resolution, either 8, 9, or 10.\n",
     "# 8 means 8 bits for the waveform, 2 bits for the markers (i.e. 2 markers)\n",
