--- a/docs/examples/Pulse_Building_Tutorial.ipynb
+++ b/docs/examples/Pulse_Building_Tutorial.ipynb
@@ -81,8 +81,8 @@
     "import broadbean as bb\n",
     "from broadbean.plotting import plotter\n",
     "\n",
-    "mpl.rcParams['figure.figsize'] = (8, 3)\n",
-    "mpl.rcParams['figure.subplot.bottom'] = 0.15 "
+    "mpl.rcParams[\"figure.figsize\"] = (8, 3)\n",
+    "mpl.rcParams[\"figure.subplot.bottom\"] = 0.15"
    ]
   },
   {
@@ -131,7 +131,7 @@
     "\n",
     "# the blueprint is filled via the insertSegment method\n",
     "# Call signature: position in the blueprint, function, args, name, duration\n",
-    "bp1.insertSegment(0, ramp, (0, 1e-3), name='', dur=3e-6)\n",
+    "bp1.insertSegment(0, ramp, (0, 1e-3), name=\"\", dur=3e-6)\n",
     "\n",
     "# A sample rate can be set (Sa/S). Without a sample rate, we can not plot the blueprint.\n",
     "bp1.setSR(1e9)\n",
@@ -140,9 +140,11 @@
     "bp1.showPrint()\n",
     "\n",
     "# more segments can be added...\n",
-    "bp1.insertSegment(1, sine, (5e5, 1e-3, 1e-3, 0), name='mysine', dur=2e-6)\n",
-    "bp1.insertSegment(2, ramp, (1e-3, 0), name='', dur=3e-6)\n",
-    "bp1.insertSegment(3, arb_func, (lambda t, ampl: ampl * t * t, {\"ampl\": 5e8}), name='myfunc', dur=2e-6)\n",
+    "bp1.insertSegment(1, sine, (5e5, 1e-3, 1e-3, 0), name=\"mysine\", dur=2e-6)\n",
+    "bp1.insertSegment(2, ramp, (1e-3, 0), name=\"\", dur=3e-6)\n",
+    "bp1.insertSegment(\n",
+    "    3, arb_func, (lambda t, ampl: ampl * t * t, {\"ampl\": 5e8}), name=\"myfunc\", dur=2e-6\n",
+    ")\n",
     "\n",
     "# ... and reinspected\n",
     "bp1.showPrint()"
@@ -204,7 +206,7 @@
     "plotter(bp2)\n",
     "\n",
     "# Segments may be removed from a blueprint. They are removed by name.\n",
-    "bp2.removeSegment('ramp2')\n",
+    "bp2.removeSegment(\"ramp2\")\n",
     "plotter(bp2)"
    ]
   },
@@ -225,9 +227,9 @@
    ],
    "source": [
     "# A blueprint has a handful of different lengths one may check\n",
-    "print(f'Number of points in blueprint: {bp1.points}')\n",
-    "print(f'Length of blueprint in seconds: {bp1.duration}')\n",
-    "print(f'Number of segments in blueprint: {bp1.length_segments}')\n"
+    "print(f\"Number of points in blueprint: {bp1.points}\")\n",
+    "print(f\"Length of blueprint in seconds: {bp1.duration}\")\n",
+    "print(f\"Number of segments in blueprint: {bp1.length_segments}\")"
    ]
   },
   {
@@ -344,11 +346,15 @@
     "bp_rtm.setSR(100)\n",
     "bp_rtm.insertSegment(0, ramp, (0, 1), dur=1)\n",
     "bp_rtm.insertSegment(1, ramp, (1, 1), dur=1)\n",
-    "bp_rtm.insertSegment(2, sine, (1.675, 1, 0, np.pi/2), dur=1.5, name='mysine')  # This is the important segment\n",
+    "bp_rtm.insertSegment(\n",
+    "    2, sine, (1.675, 1, 0, np.pi / 2), dur=1.5, name=\"mysine\"\n",
+    ")  # This is the important segment\n",
     "# make marker 1 go ON a bit before the sine comes on\n",
-    "bp_rtm.setSegmentMarker('mysine', (-0.1, 0.2), 1)  # segment name, (delay, duration), markerID\n",
+    "bp_rtm.setSegmentMarker(\n",
+    "    \"mysine\", (-0.1, 0.2), 1\n",
+    ")  # segment name, (delay, duration), markerID\n",
     "# make marker 2 go ON halfway through the sine\n",
-    "bp_rtm.setSegmentMarker('mysine', (0.75, 0.1), 2)\n",
+    "bp_rtm.setSegmentMarker(\"mysine\", (0.75, 0.1), 2)\n",
     "\n",
     "plotter(bp_rtm)\n",
     "\n",
@@ -359,7 +365,7 @@
     "plotter(bp_rtm)\n",
     "\n",
     "\n",
-    "# NB: the two different ways of inputting markers will never directly conflict, since one only specifies when to turn \n",
+    "# NB: the two different ways of inputting markers will never directly conflict, since one only specifies when to turn\n",
     "# markers ON. It is up to the user to ensure that markers switch off again as expected, i.e. that different marker\n",
     "# specifications do not overlap."
    ]
@@ -450,22 +456,24 @@
     "bp_mod = bb.BluePrint()\n",
     "bp_mod.setSR(100)\n",
     "\n",
-    "bp_mod.insertSegment(0, ramp, (0, 0), name='before', dur=1)\n",
-    "bp_mod.insertSegment(1, ramp, (1, 1), name='plateau', dur=1)\n",
-    "bp_mod.insertSegment(2, ramp, (0, 0), name='after', dur=1)\n",
+    "bp_mod.insertSegment(0, ramp, (0, 0), name=\"before\", dur=1)\n",
+    "bp_mod.insertSegment(1, ramp, (1, 1), name=\"plateau\", dur=1)\n",
+    "bp_mod.insertSegment(2, ramp, (0, 0), name=\"after\", dur=1)\n",
     "\n",
     "plotter(bp_mod)\n",
     "\n",
     "# Functional arguments can be changed\n",
     "\n",
     "# They are looked up by segment name\n",
-    "bp_mod.changeArg('before', 'stop', 1)  # the argument to change may either be the argument name or its position\n",
-    "bp_mod.changeArg('after', 0, 1)\n",
+    "bp_mod.changeArg(\n",
+    "    \"before\", \"stop\", 1\n",
+    ")  # the argument to change may either be the argument name or its position\n",
+    "bp_mod.changeArg(\"after\", 0, 1)\n",
     "\n",
     "plotter(bp_mod)\n",
     "\n",
     "# Durations can also be changed\n",
-    "bp_mod.changeDuration('plateau', 2)\n",
+    "bp_mod.changeDuration(\"plateau\", 2)\n",
     "\n",
     "plotter(bp_mod)"
    ]
@@ -537,14 +545,14 @@
     "bp_wait.setSR(100)\n",
     "\n",
     "bp_wait.insertSegment(0, ramp, (0, 0), dur=1)\n",
-    "bp_wait.insertSegment(1, ramp, (1, 1), name='plateau', dur=1)\n",
+    "bp_wait.insertSegment(1, ramp, (1, 1), name=\"plateau\", dur=1)\n",
     "# function must be sthe string 'waituntil', the argument is the ABSOLUTE time to wait until\n",
-    "bp_wait.insertSegment(2, 'waituntil', (5,))  \n",
-    "bp_wait.insertSegment(3, sine, (1, 0.1, 0, -np.pi/2), dur=1)\n",
+    "bp_wait.insertSegment(2, \"waituntil\", (5,))\n",
+    "bp_wait.insertSegment(3, sine, (1, 0.1, 0, -np.pi / 2), dur=1)\n",
     "plotter(bp_wait)\n",
     "\n",
     "# If we make the square pulse longer, the sine still occurs at 5 s\n",
-    "bp_wait.changeDuration('plateau', 1.5)\n",
+    "bp_wait.changeDuration(\"plateau\", 1.5)\n",
     "plotter(bp_wait)"
    ]
   },
@@ -593,7 +601,7 @@
     "bp_square = bb.BluePrint()\n",
     "bp_square.setSR(1e9)\n",
     "bp_square.insertSegment(0, ramp, (0, 0), dur=0.1e-6)\n",
-    "bp_square.insertSegment(1, ramp, (10e-3, 10e-3), name='top', dur=0.1e-6)\n",
+    "bp_square.insertSegment(1, ramp, (10e-3, 10e-3), name=\"top\", dur=0.1e-6)\n",
     "bp_square.insertSegment(2, ramp, (0, 0), dur=0.1e-6)\n",
     "bp_boxes = bp_square + bp_square\n",
     "#\n",
@@ -631,9 +639,9 @@
    ],
    "source": [
     "# An element has several features\n",
-    "print(f'Designated channels: {elem1.channels}')\n",
-    "print(f'Total duration: {elem1.duration} s')\n",
-    "print(f'Sample rate: {elem1.SR} (Sa/S)')"
+    "print(f\"Designated channels: {elem1.channels}\")\n",
+    "print(f\"Total duration: {elem1.duration} s\")\n",
+    "print(f\"Sample rate: {elem1.SR} (Sa/S)\")"
    ]
   },
   {
@@ -668,11 +676,15 @@
     "# We can modify the blueprints of an element through the element object\n",
     "\n",
     "# Change the sine freq\n",
-    "elem1.changeArg(3, 'sine', 'freq', 6.67e6 )  # Call signature: channel, segment name, argument, new_value\n",
+    "elem1.changeArg(\n",
+    "    3, \"sine\", \"freq\", 6.67e6\n",
+    ")  # Call signature: channel, segment name, argument, new_value\n",
     "\n",
     "# make the second plateaus last longer\n",
-    "elem1.changeDuration(1, 'top2', 0.2e-6)  # In this blueprint, the second top is called top2\n",
-    "elem1.changeDuration(3, 'top', 0.2e-6)\n",
+    "elem1.changeDuration(\n",
+    "    1, \"top2\", 0.2e-6\n",
+    ")  # In this blueprint, the second top is called top2\n",
+    "elem1.changeDuration(3, \"top\", 0.2e-6)\n",
     "\n",
     "plotter(elem1)"
    ]
@@ -695,7 +707,7 @@
    "source": [
     "seq1 = bb.Sequence()\n",
     "\n",
-    "# We fill up the sequence by adding elements at different sequence positions. \n",
+    "# We fill up the sequence by adding elements at different sequence positions.\n",
     "# A valid sequence is filled from 1 to N with NO HOLES, i.e. if position 4 is filled, so must be position 1, 2, and 3\n",
     "\n",
     "#\n",
@@ -705,7 +717,7 @@
     "bp_square = bb.BluePrint()\n",
     "bp_square.setSR(1e9)\n",
     "bp_square.insertSegment(0, ramp, (0, 0), dur=100e-9)\n",
-    "bp_square.insertSegment(1, ramp, (1e-3, 1e-3), name='top', dur=100e-9)\n",
+    "bp_square.insertSegment(1, ramp, (1e-3, 1e-3), name=\"top\", dur=100e-9)\n",
     "bp_square.insertSegment(2, ramp, (0, 0), dur=100e-9)\n",
     "bp_boxes = bp_square + bp_square\n",
     "#\n",
@@ -854,7 +866,7 @@
     "seq1.setChannelAmplitude(1, 10e-3)  # Call signature: channel, amplitude (peak-to-peak)\n",
     "seq1.setChannelOffset(1, 0)\n",
     "seq1.setChannelAmplitude(3, 10e-3)\n",
-    "seq1.setChannelOffset(3, 0) \n",
+    "seq1.setChannelOffset(3, 0)\n",
     "\n",
     "# Here we repeat each element twice and then proceed to the next, wrapping over at the end\n",
     "seq1.setSequencingTriggerWait(1, 0)\n",
@@ -903,7 +915,9 @@
     "chan1_awg_input = package[0]  # returns a tuple yielding an awg file with channel 1\n",
     "chan3_awg_input = package[1]  # returns a tuple yielding an awg file with channel 3\n",
     "\n",
-    "both_chans_awg_input = package[:]  # returns a tuple yielding an awg file with both channels\n",
+    "both_chans_awg_input = package[\n",
+    "    :\n",
+    "]  # returns a tuple yielding an awg file with both channels\n",
     "\n",
     "# This may be useful to make one big sequence for one experiment and then uploading part of it to one awg\n",
     "# and part of it to another (since physical awg's usually don't have enough channels for a big experiment)\n",
@@ -946,9 +960,9 @@
     "seq1.setChannelDelay(3, 123e-9)\n",
     "\n",
     "# To apply for a high pass filter with a cut-off frequency of 1 MHz on channel 3, we can do\n",
-    "seq1.setChannelFilterCompensation(3, 'HP', order=1, f_cut=1e6)\n",
+    "seq1.setChannelFilterCompensation(3, \"HP\", order=1, f_cut=1e6)\n",
     "# or, equivalently,\n",
-    "seq1.setChannelFilterCompensation(3, 'HP', order=1, tau=1e-6)\n",
+    "seq1.setChannelFilterCompensation(3, \"HP\", order=1, tau=1e-6)\n",
     "\n",
     "# Note that setting the filter compensation may invalidate the sequence in the sense that the specified voltage ranges\n",
     "# on the AWG may have become too small. The function outputForAWGFile will warn you if this is the case.\n",
@@ -985,7 +999,7 @@
     }
    ],
    "source": [
-    "# For sanity checking, it may be helpful to see how the compensated waveforms look. \n",
+    "# For sanity checking, it may be helpful to see how the compensated waveforms look.\n",
     "# The plotter function can display the delays and filter compensations\n",
     "\n",
     "plotter(seq1, apply_filters=True, apply_delays=True)"
@@ -1057,8 +1071,8 @@
     "# First, we make a basic element, in this example containing just a single blueprint\n",
     "basebp = bb.BluePrint()\n",
     "basebp.insertSegment(0, ramp, (0, 0), dur=0.5)\n",
-    "basebp.insertSegment(1, ramp, (1, 1), dur=1, name='varyme')\n",
-    "basebp.insertSegment(2, 'waituntil', 5)\n",
+    "basebp.insertSegment(1, ramp, (1, 1), dur=1, name=\"varyme\")\n",
+    "basebp.insertSegment(2, \"waituntil\", 5)\n",
     "basebp.setSR(100)\n",
     "\n",
     "baseelem = bb.Element()\n",
@@ -1068,9 +1082,9 @@
     "\n",
     "# Now we make a 5-step sequence varying the duration of the high level\n",
     "# The inputs are lists, since several things can be varied (see Example 2)\n",
-    "channels = [1] \n",
-    "names = ['varyme']\n",
-    "args = ['duration']\n",
+    "channels = [1]\n",
+    "names = [\"varyme\"]\n",
+    "args = [\"duration\"]\n",
     "iters = [[1, 1.5, 2, 2.5, 3]]\n",
     "\n",
     "seq1 = bb.makeVaryingSequence(baseelem, channels, names, args, iters)\n",
@@ -1113,8 +1127,8 @@
     "# We make the same base element as in Example 1\n",
     "basebp = bb.BluePrint()\n",
     "basebp.insertSegment(0, ramp, (0, 0), dur=0.5)\n",
-    "basebp.insertSegment(1, ramp, (1, 1), dur=1, name='varyme')\n",
-    "basebp.insertSegment(2, 'waituntil', 5)\n",
+    "basebp.insertSegment(1, ramp, (1, 1), dur=1, name=\"varyme\")\n",
+    "basebp.insertSegment(2, \"waituntil\", 5)\n",
     "basebp.setSR(100)\n",
     "\n",
     "baseelem = bb.Element()\n",
@@ -1122,9 +1136,9 @@
     "\n",
     "# Now we make a 5-step sequence varying the duration AND the high level\n",
     "# We thus vary 3 things, a duration, a ramp start, and a ramp stop\n",
-    "channels = [1, 1, 1] \n",
-    "names = ['varyme', 'varyme', 'varyme']\n",
-    "args = ['duration', 'start', 'stop']\n",
+    "channels = [1, 1, 1]\n",
+    "names = [\"varyme\", \"varyme\", \"varyme\"]\n",
+    "args = [\"duration\", \"start\", \"stop\"]\n",
     "iters = [[1, 1.5, 2, 2.5, 3], [1, 0.8, 0.7, 0.6, 0.5], [1, 0.8, 0.7, 0.6, 0.5]]\n",
     "\n",
     "seq2 = bb.makeVaryingSequence(baseelem, channels, names, args, iters)\n",
@@ -1200,12 +1214,12 @@
    "source": [
     "# Example 3: Modify the high level of a square pulse inside a sequence\n",
     "\n",
-    "# \n",
+    "#\n",
     "\n",
     "pulsebp = bb.BluePrint()\n",
     "pulsebp.insertSegment(0, ramp, (0, 0), dur=5e-4)\n",
-    "pulsebp.insertSegment(1, ramp, (1, 1), dur=1e-3, name='varyme')\n",
-    "pulsebp.insertSegment(2, 'waituntil', 2e-3)\n",
+    "pulsebp.insertSegment(1, ramp, (1, 1), dur=1e-3, name=\"varyme\")\n",
+    "pulsebp.insertSegment(2, \"waituntil\", 2e-3)\n",
     "pulsebp.setSR(1e6)\n",
     "\n",
     "sinebp = bb.BluePrint()\n",
@@ -1232,8 +1246,8 @@
     "\n",
     "poss = [1, 1]\n",
     "channels = [1, 1]\n",
-    "names = ['varyme', 'varyme']\n",
-    "args = ['start', 'stop']\n",
+    "names = [\"varyme\", \"varyme\"]\n",
+    "args = [\"start\", \"stop\"]\n",
     "iters = [[1, 0.75, 0.5], [1, 0.75, 0.5]]\n",
     "\n",
     "newseq = bb.repeatAndVarySequence(baseseq, poss, channels, names, args, iters)\n",
