--- a/docs/examples/Subsequences.ipynb
+++ b/docs/examples/Subsequences.ipynb
@@ -59,7 +59,7 @@
     "\n",
     "bp1 = bb.BluePrint()\n",
     "bp1.insertSegment(0, ramp, (0, 0), dur=t1)\n",
-    "bp1.insertSegment(1, ramp, (1, 1), dur=t2, name='perturbation')\n",
+    "bp1.insertSegment(1, ramp, (1, 1), dur=t2, name=\"perturbation\")\n",
     "bp1.insertSegment(2, ramp, (0, 0), dur=t3)\n",
     "bp1.setSR(SR)"
    ]
@@ -875,12 +875,12 @@
     "elem1.addBluePrint(1, bp1)\n",
     "\n",
     "elem2 = elem1.copy()\n",
-    "elem2.changeArg(1, 'perturbation', 'start', 0.75)\n",
-    "elem2.changeArg(1, 'perturbation', 'stop', 0.75)\n",
+    "elem2.changeArg(1, \"perturbation\", \"start\", 0.75)\n",
+    "elem2.changeArg(1, \"perturbation\", \"stop\", 0.75)\n",
     "\n",
     "elem3 = elem1.copy()\n",
-    "elem3.changeArg(1, 'perturbation', 'start', 0.5)\n",
-    "elem3.changeArg(1, 'perturbation', 'stop', 0.5)\n",
+    "elem3.changeArg(1, \"perturbation\", \"start\", 0.5)\n",
+    "elem3.changeArg(1, \"perturbation\", \"stop\", 0.5)\n",
     "\n",
     "# And put that together in a sequence\n",
     "seq = bb.Sequence()\n",
@@ -2523,19 +2523,19 @@
     "compression = 100  # this number has to be chosen with some care\n",
     "\n",
     "bp1 = bb.BluePrint()\n",
-    "bp1.insertSegment(0, ramp, (0, 0), dur=t1/compression)\n",
+    "bp1.insertSegment(0, ramp, (0, 0), dur=t1 / compression)\n",
     "bp1.setSR(SR)\n",
     "elem1 = bb.Element()\n",
     "elem1.addBluePrint(1, bp1)\n",
     "#\n",
     "bp2 = bb.BluePrint()\n",
-    "bp2.insertSegment(0, ramp, (1, 1), dur=t2, name='perturbation')\n",
+    "bp2.insertSegment(0, ramp, (1, 1), dur=t2, name=\"perturbation\")\n",
     "bp2.setSR(SR)\n",
     "elem2 = bb.Element()\n",
     "elem2.addBluePrint(1, bp2)\n",
     "#\n",
     "bp3 = bb.BluePrint()\n",
-    "bp3.insertSegment(0, ramp, (0, 0), dur=t3/compression)\n",
+    "bp3.insertSegment(0, ramp, (0, 0), dur=t3 / compression)\n",
     "bp3.setSR(SR)\n",
     "elem3 = bb.Element()\n",
     "elem3.addBluePrint(1, bp3)\n",
@@ -2550,12 +2550,12 @@
     "\n",
     "# Now make the variation\n",
     "seq2 = seq.copy()\n",
-    "seq2.element(2).changeArg(1, 'perturbation', 'start', 0.75)\n",
-    "seq2.element(2).changeArg(1, 'perturbation', 'stop', 0.75)\n",
+    "seq2.element(2).changeArg(1, \"perturbation\", \"start\", 0.75)\n",
+    "seq2.element(2).changeArg(1, \"perturbation\", \"stop\", 0.75)\n",
     "#\n",
     "seq3 = seq.copy()\n",
-    "seq3.element(2).changeArg(1, 'perturbation', 'start', 0.5)\n",
-    "seq3.element(2).changeArg(1, 'perturbation', 'stop', 0.5)\n",
+    "seq3.element(2).changeArg(1, \"perturbation\", \"start\", 0.5)\n",
+    "seq3.element(2).changeArg(1, \"perturbation\", \"stop\", 0.5)\n",
     "#\n",
     "fullseq = seq + seq2 + seq3\n",
     "plotter(fullseq)"
